--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest",
+    "test_artifacts" : "jest --ci --reporters=default --reporters=jest-junit"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.1.1",
@@ -45,6 +46,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.1",
     "jest": "^29.5.0",
+    "jest-junit": "^16.0.0",
     "ts-jest": "^29.1.0",
     "typescript": "*"
   }
