--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,9 +29,11 @@ test-backend:
 test-frontend:
   stage: test
   script:
+    - docker container rm jobmon_frontend_tests 2> /dev/null
     - docker compose --file docker-compose.test.yml build --pull jobmon_frontend_tests
     - docker compose --file docker-compose.test.yml run --name jobmon_frontend_test jobmon_frontend_tests
     - docker cp jobmon_frontend_test:/app/junit.xml ./
+    - docker rm jobmon_frontend_test
   artifacts:
     when: always
     reports:
