--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,8 +25,17 @@ test-backend:
     - build-backend
   stage: test
   script:
+    - docker rm jobmon_backend_test || true
     - docker compose --file docker-compose.test.yml build --pull jobmon_backend_tests
-    - docker compose --file docker-compose.test.yml run --rm jobmon_backend_tests
+    - docker compose --file docker-compose.test.yml run --name jobmon_backend_test jobmon_backend_tests
+    - docker cp jobmon_backend_test:/app/report_backend.xml ./
+    - docker rm jobmon_backend_test
+  artifacts:
+    when: always
+    reports:
+      junit:
+        - report_backend.xml
+
 
 test-frontend:
   needs:
@@ -36,10 +45,10 @@ test-frontend:
     - docker rm jobmon_frontend_test || true
     - docker compose --file docker-compose.test.yml build --pull jobmon_frontend_tests
     - docker compose --file docker-compose.test.yml run --name jobmon_frontend_test jobmon_frontend_tests
-    - docker cp jobmon_frontend_test:/app/junit.xml ./
+    - docker cp jobmon_frontend_test:/app/report_frontend.xml ./
     - docker rm jobmon_frontend_test
   artifacts:
     when: always
     reports:
       junit:
-        - junit.xml
+        - report_frontend.xml
