--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,6 +55,7 @@
     "jest-environment-jsdom": "^29.5.0",
     "msw": "^1.2.1",
     "react-hooks": "^1.0.1",
+    "react-test-renderer": "^18.2.0",
     "ts-jest": "^29.1.0",
     "typescript": "*",
     "whatwg-fetch": "^3.6.2"
