--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
-    "test_artifacts" : "jest --ci --reporters=default --reporters=jest-junit"
+    "test_artifacts": "jest --ci --reporters=default --reporters=jest-junit"
   },
   "jest-junit": {
     "outputName": "report_frontend.xml"
@@ -17,6 +17,7 @@
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@testing-library/jest-dom": "^5.16.5",
     "@types/d3": "^7.1.0",
     "@types/humanize-duration": "^3.27.1",
     "base64url": "^3.0.1",
@@ -26,6 +27,7 @@
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
     "humanize-duration": "^3.27.1",
+    "jest-unit": "^0.0.2",
     "jszip": "^3.10.1",
     "next": "^12.1.0",
     "rc-slider": "^9.7.5",
@@ -36,11 +38,15 @@
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "^29.5.0",
     "@types/node": "16.11.12",
     "@types/react": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.49.0",
+    "esbuild": "^0.17.17",
+    "esbuild-jest": "^0.5.0",
     "eslint": "^8.0.1",
     "eslint-config-next": "12.0.7",
     "eslint-config-standard-with-typescript": "^33.0.0",
@@ -49,8 +55,16 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.1",
     "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "jest-junit": "^16.0.0",
+    "msw": "^1.2.1",
+    "react-hooks": "^1.0.1",
+    "react-test-renderer": "^18.2.0",
     "ts-jest": "^29.1.0",
-    "typescript": "*"
+    "typescript": "*",
+    "whatwg-fetch": "^3.6.2"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
