--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,14 +47,10 @@ test-frontend:
   needs:
     - build-frontend
   stage: test
-  before_script:
-    - docker rm jobmon_frontend_test || true
-  after_script:
-    - docker rm jobmon_frontend_test
   script:
-    - docker compose --file docker-compose.test.yml build --pull jobmon_frontend_tests
-    - docker compose --file docker-compose.test.yml run --name jobmon_frontend_test jobmon_frontend_tests
-    - docker cp jobmon_frontend_test:/app/report_frontend.xml ./
+    - docker build -t jobmon-frontend_reporter --target reporter --pull frontend
+    - docker run --name jobmon-frontend_reporter jobmon-frontend_reporter
+    - docker cp jobmon-frontend_reporter:/app/report_frontend.xml ./
   artifacts:
     # Artifact to safe the test results and visualize them in gitlab
     when: always
