Move vetting to docker stage

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,14 @@ build-frontend:
 #### Test stage ###############################################################
 ###############################################################################
 
+vetting-backend:
+  needs:
+    - build-backend
+  stage: test
+  script:
+    - docker build -t jobmon-backend_vetting --target vetting --pull backend
+    - docker run --name jobmon-backend_vetting --rm jobmon-backend_vetting
+
 test-backend:
   needs:
     - build-backend
