--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -48,7 +48,7 @@ RUN --mount=type=cache,target=/root/.cache/go-build \
 ###
 FROM builder AS vetting
 
-CMD [ "go" "vet" "-v" "./..." ]
+CMD [ "go", "vet", "-v", "./..." ]
 
 ###
 # Create image from builder for static checking
@@ -62,14 +62,14 @@ FROM builder AS staticchecking
 # Install [The advanced Go linter](https://github.com/dominikh/go-tools)
 RUN go install honnef.co/go/tools/cmd/staticcheck@latest
 
-CMD [ "/go/bin/staticcheck" "-f" "stylish" "./..." ]
+CMD [ "/go/bin/staticcheck", "-f", "stylish", "./..." ]
 
 ###
 # Create image from builder for testing
 ###
 FROM builder AS testing
 
-CMD [ "go" "test" "-v" "./..." ]
+CMD [ "go", "test", "-v", "./..." ]
 
 ###
 # Create image from builder to create testreports
@@ -83,7 +83,7 @@ FROM builder AS reporter
 # Install [gotestsum](https://github.com/gotestyourself/gotestsum)
 RUN go install gotest.tools/gotestsum@latest
 
-CMD [ "/go/bin/gotestsum" "--junitfile" "report_backend.xml" "--format" "testname" ]
+CMD [ "/go/bin/gotestsum", "--junitfile", "report_backend.xml", "--format", "testname" ]
 
 ###
 # Create minimal Debian backend image
