--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -4,29 +4,27 @@
         "es2021": true
     },
     "extends": [
+        "eslint:recommended",
         "plugin:react/recommended",
+        "plugin:@next/next/recommended",
         "plugin:@typescript-eslint/recommended"
     ],
-    "overrides": [],
+    "overrides": [
+    ],
+    "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": "latest",
-        "sourceType": "module",
-        "project": [
-            "tsconfig.json"
-        ]
+        "sourceType": "module"
     },
     "plugins": [
-        "react"
+        "react",
+        "@typescript-eslint"
     ],
     "rules": {
-        "quotes": [
-            "warn",
-            "double"
-        ]
     },
     "settings": {
-        "react": {
-            "version": "detect"
-        }
+      "react": {
+        "version": "detect"
+      }
     }
 }
