--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,22 +38,25 @@
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^13.4.1",
     "@testing-library/react": "^14.0.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "^29.5.0",
     "@types/node": "16.11.12",
     "@types/react": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.49.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
     "esbuild": "^0.17.17",
     "esbuild-jest": "^0.5.0",
-    "eslint": "^8.0.1",
+    "eslint": "^8.40.0",
     "eslint-config-next": "12.0.7",
     "eslint-config-standard-with-typescript": "^33.0.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-next": "^0.0.0",
     "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.32.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "jest-junit": "^16.0.0",
