Docker stages for development tools frontend

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -15,7 +15,7 @@ COPY package.json yarn.lock* package-lock.json* pnpm-lock.yaml* ./
 RUN \
     if [ -f yarn.lock ]; then \
         # Based on https://stackoverflow.com/questions/58482655/what-is-the-closest-to-npm-ci-in-yarn
-        rm -rf node_modules && yarn install --frozen-lockfile --force --no-optional ; \
+        rm -rf node_modules && yarn install --frozen-lockfile; \
     elif [ -f package-lock.json ]; then \
         npm ci; \
     elif [ -f pnpm-lock.yaml ]; then \
@@ -39,8 +39,30 @@ ENV NEXT_PUBLIC_BACKEND_URL=${NEXT_PUBLIC_BACKEND_URL}
 
 ARG NEXT_PUBLIC_BACKEND_WS
 ENV NEXT_PUBLIC_BACKEND_WS=${NEXT_PUBLIC_BACKEND_WS}
-
+    
+# Build frontend
 RUN ["yarn", "build"]
+
+###
+# Create image from builder for linting
+#
+# ESLint statically analyzes your code to quickly find problems. 
+# See: https://eslint.org/
+###
+
+FROM builder AS staticchecking
+
+CMD [ "yarn", "lint" ]
+
+
+
+###
+# Create image from builder for testing
+###
+FROM builder AS testing
+
+CMD [ "yarn", "test" ]
+
 
 ###
 # Create image from builder to create testreports
