Fix description for GPU memory metrics

--- a/backend/sample.config.json
+++ b/backend/sample.config.json
@@ -392,7 +392,7 @@
             ],
             "SampleInterval": "",
             "Unit": "MB",
-            "DisplayName": "GPU Memory Bandwidth",
+            "DisplayName": "GPU Memory Usage",
             "FilterFunc": "",
             "PostQueryOp": "",
             "SeparationKey": "type-id",
@@ -417,7 +417,7 @@
             ],
             "SampleInterval": "",
             "Unit": "%",
-            "DisplayName": "GPU Memory Usage",
+            "DisplayName": "GPU Memory Utilization",
             "FilterFunc": "",
             "PostQueryOp": "",
             "SeparationKey": "type-id",
