--- a/backend/sample.config.json
+++ b/backend/sample.config.json
@@ -159,7 +159,7 @@
             ],
             "SampleInterval": "",
             "Unit": "MFLOP/s",
-            "DisplayName": "FLOPs",
+            "DisplayName": "CPU FLOPs",
             "FilterFunc": "",
             "PostQueryOp": "",
             "SeparationKey": "type-id",
@@ -377,31 +377,6 @@
             "SubMeasurements": []
         },
         {
-            "GUID": "3b0c2afa-2cf2-4e17-9ece-b78ef7ff18dc",
-            "Type": "accelerator",
-            "Categories": [
-                "Memory"
-            ],
-            "Measurement": "nv_fb_mem_used",
-            "AggFn": "mean",
-            "AvailableAggFns": [
-                "mean",
-                "sum",
-                "min",
-                "max"
-            ],
-            "SampleInterval": "",
-            "Unit": "MB",
-            "DisplayName": "GPU Memory Usage",
-            "FilterFunc": "",
-            "PostQueryOp": "",
-            "SeparationKey": "type-id",
-            "MaxPerNode": 40536,
-            "MaxPerType": 40536,
-            "PThreadAggFn": "",
-            "SubMeasurements": []
-        },
-        {
             "GUID": "3184052f-d178-4fb3-8fbb-c3077fcd3058",
             "Type": "accelerator",
             "Categories": [
@@ -423,6 +398,31 @@
             "SeparationKey": "type-id",
             "MaxPerNode": 100,
             "MaxPerType": 100,
+            "PThreadAggFn": "",
+            "SubMeasurements": []
+        },
+        {
+            "GUID": "3b0c2afa-2cf2-4e17-9ece-b78ef7ff18dc",
+            "Type": "accelerator",
+            "Categories": [
+                "Memory"
+            ],
+            "Measurement": "nv_fb_mem_used",
+            "AggFn": "mean",
+            "AvailableAggFns": [
+                "mean",
+                "sum",
+                "min",
+                "max"
+            ],
+            "SampleInterval": "",
+            "Unit": "MB",
+            "DisplayName": "GPU Memory Usage",
+            "FilterFunc": "",
+            "PostQueryOp": "",
+            "SeparationKey": "type-id",
+            "MaxPerNode": 40536,
+            "MaxPerType": 40536,
             "PThreadAggFn": "",
             "SubMeasurements": []
         },
@@ -559,9 +559,9 @@
                 "b0ee235b-a2e1-4f87-88ac-ec56f51c3b8c",
                 "b3fed750-ce8d-4370-8066-bd9d343db570",
                 "d13ef9e4-28bc-401e-a7f0-53918385f9f4",
+                "3184052f-d178-4fb3-8fbb-c3077fcd3058",
                 "3b0c2afa-2cf2-4e17-9ece-b78ef7ff18dc",
                 "e770d05b-64e0-4e90-b2e2-2f29a6e175bc",
-                "3184052f-d178-4fb3-8fbb-c3077fcd3058",
                 "6cf6178f-90ea-4682-9d94-0c9f0c8f6b72",
                 "69414157-6d1f-42d9-b7e8-31a4cc5b9615",
                 "42b6eccc-e7e7-41da-99e8-9f28f0804c9c",
@@ -593,21 +593,21 @@
             ],
             "VirtualPartitions": null
         },
-        "MetricCategories": [
-            "Filesystem",
-            "Memory",
-            "Energy",
-            "Interconnect",
-            "Performance",
-            "Temperature"
-        ],
-        "RadarChartMetrics": [
-            "cf5a491e-0499-41ea-b388-c5ffb360537b",
-            "b0ee235b-a2e1-4f87-88ac-ec56f51c3b8c",
-            "d395edec-8a60-4d98-8959-6e94980c7019",
-            "3184052f-d178-4fb3-8fbb-c3077fcd3058",
-            "e770d05b-64e0-4e90-b2e2-2f29a6e175bc"
-        ],
+    "MetricCategories": [
+        "Filesystem",
+        "Memory",
+        "Energy",
+        "Interconnect",
+        "Performance",
+        "Temperature"
+    ],
+    "RadarChartMetrics": [
+        "cf5a491e-0499-41ea-b388-c5ffb360537b",
+        "b0ee235b-a2e1-4f87-88ac-ec56f51c3b8c",
+        "d395edec-8a60-4d98-8959-6e94980c7019",
+        "3184052f-d178-4fb3-8fbb-c3077fcd3058",
+        "e770d05b-64e0-4e90-b2e2-2f29a6e175bc"
+    ],
         "EmailNotification": {
             "SenderAddress": "<sender_email>",
             "SenderPassword": "<sender_password>",
