--- a/backend/sample.config.json
+++ b/backend/sample.config.json
@@ -131,15 +131,19 @@
             ],
             "Measurement": "load_one",
             "AggFn": "mean",
-            "AvailableAggFns": [],
+            "AvailableAggFns": [
+                "mean",
+                "min",
+                "max"
+            ],
             "SampleInterval": "",
-            "Unit": "%",
-            "DisplayName": "CPU Utilization",
+            "Unit": "",
+            "DisplayName": "CPU One Minute Load",
             "FilterFunc": "",
             "PostQueryOp": "",
             "SeparationKey": "hostname",
-            "MaxPerNode": 100,
-            "MaxPerType": 100,
+            "MaxPerNode": 76,
+            "MaxPerType": 76,
             "PThreadAggFn": "",
             "SubMeasurements": []
         },
@@ -569,7 +573,8 @@
                 "abe42586-c04c-4c1e-aed7-813160764c84",
                 "cf1926cc-f478-48ae-91df-c03a43374158",
                 "b985d0d8-0329-4811-811f-daa648289d18",
-                "687b8465-4d6e-4fed-a17e-28ac3a154ae8"
+                "687b8465-4d6e-4fed-a17e-28ac3a154ae8",
+                "ebf6b249-7f62-4a97-a4c4-39b7611e4be4"
             ],
             "VirtualPartitions": null
         },
@@ -589,7 +594,8 @@
                 "cf1926cc-f478-48ae-91df-c03a43374158",
                 "abe42586-c04c-4c1e-aed7-813160764c84",
                 "b985d0d8-0329-4811-811f-daa648289d18",
-                "687b8465-4d6e-4fed-a17e-28ac3a154ae8"
+                "687b8465-4d6e-4fed-a17e-28ac3a154ae8",
+                "ebf6b249-7f62-4a97-a4c4-39b7611e4be4"
             ],
             "VirtualPartitions": null
         },
