--- a/backend/sample.config.json
+++ b/backend/sample.config.json
@@ -173,6 +173,30 @@
             "SubMeasurements": []
         },
         {
+            "GUID": "eaaf8930-c5d1-44a4-9fc3-61d264657cbc",
+            "Type": "hwthread",
+            "Categories": [
+                "Performance"
+            ],
+            "Measurement": "cpufreq",
+            "AggFn": "mean",
+            "AvailableAggFns": [
+                "mean",
+                "max",
+                "min"
+            ],
+            "SampleInterval": "",
+            "Unit": "MHz",
+            "DisplayName": "CPU Frequency",
+            "FilterFunc": "",
+            "PostQueryOp": "",
+            "SeparationKey": "type-id",
+            "MaxPerNode": 3200,
+            "MaxPerType": 3200,
+            "PThreadAggFn": "",
+            "SubMeasurements": []
+        },
+        {
             "GUID": "e6fb6087-f709-45e8-aa63-5892e110640b",
             "Type": "cpu",
             "Categories": [
@@ -600,7 +624,8 @@
                 "b985d0d8-0329-4811-811f-daa648289d18",
                 "687b8465-4d6e-4fed-a17e-28ac3a154ae8",
                 "ebf6b249-7f62-4a97-a4c4-39b7611e4be4",
-                "e6fb6087-f709-45e8-aa63-5892e110640b"
+                "e6fb6087-f709-45e8-aa63-5892e110640b",
+                "eaaf8930-c5d1-44a4-9fc3-61d264657cbc"
             ],
             "VirtualPartitions": null
         },
@@ -622,7 +647,8 @@
                 "b985d0d8-0329-4811-811f-daa648289d18",
                 "687b8465-4d6e-4fed-a17e-28ac3a154ae8",
                 "ebf6b249-7f62-4a97-a4c4-39b7611e4be4",
-                "e6fb6087-f709-45e8-aa63-5892e110640b"
+                "e6fb6087-f709-45e8-aa63-5892e110640b",
+                "eaaf8930-c5d1-44a4-9fc3-61d264657cbc"
             ],
             "VirtualPartitions": null
         },
