--- a/backend/sample.config.json
+++ b/backend/sample.config.json
@@ -101,7 +101,7 @@
         },
         {
             "GUID": "d13ef9e4-28bc-401e-a7f0-53918385f9f4",
-            "Type": "cpu",
+            "Type": "hwthread",
             "Categories": [
                 "Temperature"
             ],
@@ -149,7 +149,7 @@
         },
         {
             "GUID": "d395edec-8a60-4d98-8959-6e94980c7019",
-            "Type": "cpu",
+            "Type": "hwthread",
             "Categories": [
                 "Performance"
             ],
@@ -246,7 +246,7 @@
         },
         {
             "GUID": "e6fb6087-f709-45e8-aa63-5892e110640b",
-            "Type": "cpu",
+            "Type": "hwthread",
             "Categories": [
                 "Performance"
             ],
@@ -348,6 +348,31 @@
             ]
         },
         {
+            "GUID": "86251d9b-693c-461c-b121-830fd85c1ab7",
+            "Type": "node",
+            "Categories": [
+                "Filesystem"
+            ],
+            "Measurement": "gpfs_num_inode_updates",
+            "AggFn": "sum",
+            "AvailableAggFns": [
+                "mean",
+                "sum",
+                "min",
+                "max"
+            ],
+            "SampleInterval": "",
+            "Unit": "OP/s",
+            "DisplayName": "GPFS Inode Updates",
+            "FilterFunc": "",
+            "PostQueryOp": "|\u003e derivative(unit: 1s, nonNegative: true, columns: [\"_value\"], timeColumn: \"_time\")",
+            "SeparationKey": "hostname",
+            "MaxPerNode": 1000000,
+            "MaxPerType": 1000000,
+            "PThreadAggFn": "mean",
+            "SubMeasurements": null
+        },
+        {
             "GUID": "abe42586-c04c-4c1e-aed7-813160764c84",
             "Type": "node",
             "Categories": [
@@ -376,6 +401,81 @@
                 "gpfs_num_inode_updates",
                 "gpfs_num_readdirs"
             ]
+        },
+        {
+            "GUID": "ef4f8f13-82e2-4dc0-8b8a-615da76815fd",
+            "Type": "node",
+            "Categories": [
+                "Filesystem"
+            ],
+            "Measurement": "gpfs_num_closes",
+            "AggFn": "sum",
+            "AvailableAggFns": [
+                "mean",
+                "sum",
+                "min",
+                "max"
+            ],
+            "SampleInterval": "",
+            "Unit": "OP/s",
+            "DisplayName": "GPFS Num Closes",
+            "FilterFunc": "",
+            "PostQueryOp": "|\u003e derivative(unit: 1s, nonNegative: true, columns: [\"_value\"], timeColumn: \"_time\")",
+            "SeparationKey": "hostname",
+            "MaxPerNode": 1000000,
+            "MaxPerType": 1000000,
+            "PThreadAggFn": "mean",
+            "SubMeasurements": null
+        },
+        {
+            "GUID": "50f5a265-fcbf-4fc0-b4f4-453e74605668",
+            "Type": "node",
+            "Categories": [
+                "Filesystem"
+            ],
+            "Measurement": "gpfs_num_opens",
+            "AggFn": "sum",
+            "AvailableAggFns": [
+                "mean",
+                "sum",
+                "min",
+                "max"
+            ],
+            "SampleInterval": "",
+            "Unit": "OP/s",
+            "DisplayName": "GPFS Num Opens",
+            "FilterFunc": "",
+            "PostQueryOp": "|\u003e derivative(unit: 1s, nonNegative: true, columns: [\"_value\"], timeColumn: \"_time\")",
+            "SeparationKey": "hostname",
+            "MaxPerNode": 1000000,
+            "MaxPerType": 1000000,
+            "PThreadAggFn": "mean",
+            "SubMeasurements": null
+        },
+        {
+            "GUID": "89784861-8766-4d3f-bc34-418bb08c0d7f",
+            "Type": "node",
+            "Categories": [
+                "Filesystem"
+            ],
+            "Measurement": "gpfs_num_readdirs",
+            "AggFn": "sum",
+            "AvailableAggFns": [
+                "mean",
+                "sum",
+                "min",
+                "max"
+            ],
+            "SampleInterval": "",
+            "Unit": "OP/s",
+            "DisplayName": "GPFS Num Readdirs",
+            "FilterFunc": "",
+            "PostQueryOp": "|\u003e derivative(unit: 1s, nonNegative: true, columns: [\"_value\"], timeColumn: \"_time\")",
+            "SeparationKey": "hostname",
+            "MaxPerNode": 1000000,
+            "MaxPerType": 1000000,
+            "PThreadAggFn": "mean",
+            "SubMeasurements": null
         },
         {
             "GUID": "b985d0d8-0329-4811-811f-daa648289d18",
@@ -725,7 +825,11 @@
                 "1d481817-c2cf-4109-a71b-20ebc99243d8",
                 "c2638489-3125-4d14-a21f-2481d86e261c",
                 "9113a26b-fecc-4d40-9655-ca537ecc82bf",
-                "006a881e-afa9-4d99-99c9-d5aec1369ab1"
+                "006a881e-afa9-4d99-99c9-d5aec1369ab1",
+                "86251d9b-693c-461c-b121-830fd85c1ab7",
+                "89784861-8766-4d3f-bc34-418bb08c0d7f",
+                "50f5a265-fcbf-4fc0-b4f4-453e74605668",
+                "ef4f8f13-82e2-4dc0-8b8a-615da76815fd"
             ],
             "VirtualPartitions": null
         },
@@ -750,7 +854,11 @@
                 "e6fb6087-f709-45e8-aa63-5892e110640b",
                 "eaaf8930-c5d1-44a4-9fc3-61d264657cbc",
                 "1d481817-c2cf-4109-a71b-20ebc99243d8",
-                "c2638489-3125-4d14-a21f-2481d86e261c"
+                "c2638489-3125-4d14-a21f-2481d86e261c",
+                "86251d9b-693c-461c-b121-830fd85c1ab7",
+                "89784861-8766-4d3f-bc34-418bb08c0d7f",
+                "50f5a265-fcbf-4fc0-b4f4-453e74605668",
+                "ef4f8f13-82e2-4dc0-8b8a-615da76815fd"
             ],
             "VirtualPartitions": null
         },
@@ -777,3 +885,4 @@
             "SmtpPort": 465
         }
     }
+}
