Fix unit for CPU Memory Usage

--- a/backend/sample.config.json
+++ b/backend/sample.config.json
@@ -89,7 +89,7 @@
                 "max"
             ],
             "SampleInterval": "",
-            "Unit": "KB",
+            "Unit": "kB",
             "DisplayName": "CPU Memory Usage",
             "FilterFunc": "",
             "PostQueryOp": "",
