Fix: the "listen ... http2" directive is deprecated, use the "http2" directive

--- a/nginx/configs/default.conf
+++ b/nginx/configs/default.conf
@@ -26,8 +26,9 @@ map $http_upgrade $connection_upgrade {
 }
 
 server {
-    listen 443 ssl http2 default_server;
-    listen [::]:443 ssl http2 default_server;
+    listen 443 ssl default_server;
+    listen [::]:443 ssl default_server;
+    http2 on;
     server_name localhost my-monitor-db.example.org;
 
     # Use docker compose internal DNS server
