--- a/backend/sample.config.json
+++ b/backend/sample.config.json
@@ -707,6 +707,54 @@
             "PThreadAggFn": ""
         },
         {
+            "GUID": "ca8970b8-8ca0-4da3-9881-b3e8e337c3dc",
+            "Type": "node",
+            "Categories": [
+                "Interconnect"
+            ],
+            "Measurement": "ib_recv_pkts",
+            "AggFn": "sum",
+            "AvailableAggFns": [
+                "mean",
+                "sum",
+                "max",
+                "min"
+            ],
+            "SampleInterval": "",
+            "Unit": "Packet/s",
+            "DisplayName": "Infiniband Packets Received",
+            "FilterFunc": "",
+            "PostQueryOp": "|\u003e derivative(unit: 1s, nonNegative: true, columns: [\"_value\"], timeColumn: \"_time\")",
+            "SeparationKey": "device",
+            "MaxPerNode": 0,
+            "MaxPerType": 0,
+            "PThreadAggFn": ""
+        },
+        {
+            "GUID": "0d4c3353-5ba3-4a60-836b-5b4bba948c28",
+            "Type": "node",
+            "Categories": [
+                "Interconnect"
+            ],
+            "Measurement": "ib_xmit_pkts",
+            "AggFn": "sum",
+            "AvailableAggFns": [
+                "mean",
+                "sum",
+                "max",
+                "min"
+            ],
+            "SampleInterval": "",
+            "Unit": "Packet/s",
+            "DisplayName": "Infiniband Packets Send",
+            "FilterFunc": "",
+            "PostQueryOp": "|\u003e derivative(unit: 1s, nonNegative: true, columns: [\"_value\"], timeColumn: \"_time\")",
+            "SeparationKey": "device",
+            "MaxPerNode": 0,
+            "MaxPerType": 0,
+            "PThreadAggFn": ""
+        },
+        {
             "GUID": "cf5a491e-0499-41ea-b388-c5ffb360537b",
             "Type": "node",
             "Categories": [
@@ -723,6 +771,54 @@
             "SampleInterval": "",
             "Unit": "B/s",
             "DisplayName": "Infiniband Traffic",
+            "FilterFunc": "",
+            "PostQueryOp": "|\u003e derivative(unit: 1s, nonNegative: true, columns: [\"_value\"], timeColumn: \"_time\")",
+            "SeparationKey": "device",
+            "MaxPerNode": 25000000000,
+            "MaxPerType": 25000000000,
+            "PThreadAggFn": ""
+        },
+        {
+            "GUID": "47ea6dd0-6d76-4aeb-9133-af70a5381b96",
+            "Type": "node",
+            "Categories": [
+                "Interconnect"
+            ],
+            "Measurement": "ib_recv",
+            "AggFn": "sum",
+            "AvailableAggFns": [
+                "mean",
+                "sum",
+                "min",
+                "max"
+            ],
+            "SampleInterval": "",
+            "Unit": "B/s",
+            "DisplayName": "Infiniband Traffic Received",
+            "FilterFunc": "",
+            "PostQueryOp": "|\u003e derivative(unit: 1s, nonNegative: true, columns: [\"_value\"], timeColumn: \"_time\")",
+            "SeparationKey": "device",
+            "MaxPerNode": 25000000000,
+            "MaxPerType": 25000000000,
+            "PThreadAggFn": ""
+        },
+        {
+            "GUID": "e8359d67-a507-4a16-93f4-9c984eada919",
+            "Type": "node",
+            "Categories": [
+                "Interconnect"
+            ],
+            "Measurement": "ib_xmit",
+            "AggFn": "sum",
+            "AvailableAggFns": [
+                "mean",
+                "sum",
+                "min",
+                "max"
+            ],
+            "SampleInterval": "",
+            "Unit": "B/s",
+            "DisplayName": "Infiniband Traffic Send",
             "FilterFunc": "",
             "PostQueryOp": "|\u003e derivative(unit: 1s, nonNegative: true, columns: [\"_value\"], timeColumn: \"_time\")",
             "SeparationKey": "device",
@@ -760,6 +856,10 @@
                 "19437fd9-20b9-4702-8c79-76a5445db78b",
                 "08e83677-131b-42da-bcd5-f5414f5bd7b3",
                 "cf5a491e-0499-41ea-b388-c5ffb360537b",
+                "ca8970b8-8ca0-4da3-9881-b3e8e337c3dc",
+                "0d4c3353-5ba3-4a60-836b-5b4bba948c28",
+                "47ea6dd0-6d76-4aeb-9133-af70a5381b96",
+                "e8359d67-a507-4a16-93f4-9c984eada919",
                 "d395edec-8a60-4d98-8959-6e94980c7019",
                 "dc49f76d-15a1-4eae-8595-048426371795",
                 "b0ee235b-a2e1-4f87-88ac-ec56f51c3b8c",
@@ -796,6 +896,10 @@
                 "19437fd9-20b9-4702-8c79-76a5445db78b",
                 "08e83677-131b-42da-bcd5-f5414f5bd7b3",
                 "cf5a491e-0499-41ea-b388-c5ffb360537b",
+                "ca8970b8-8ca0-4da3-9881-b3e8e337c3dc",
+                "0d4c3353-5ba3-4a60-836b-5b4bba948c28",
+                "47ea6dd0-6d76-4aeb-9133-af70a5381b96",
+                "e8359d67-a507-4a16-93f4-9c984eada919",
                 "b0ee235b-a2e1-4f87-88ac-ec56f51c3b8c",
                 "b3fed750-ce8d-4370-8066-bd9d343db570",
                 "d13ef9e4-28bc-401e-a7f0-53918385f9f4",
