Correct metric name for CPU Time in Kernelspace

--- a/backend/sample.config.json
+++ b/backend/sample.config.json
@@ -189,7 +189,7 @@
             "Categories": [
                 "Performance"
             ],
-            "Measurement": "cpu_sys",
+            "Measurement": "cpu_system",
             "AggFn": "sum",
             "AvailableAggFns": [
                 "mean",
